✨feat: Upload de imagem para requests
